--- a/bio.html
+++ b/bio.html
@@ -19,9 +19,8 @@
 
 
     <h1>Biography</h1>
-    <p>The names Tyrone... Well first of all I love to be creative, tyrone loves going outside and socialising with the friends I grew up with, at the age of 7 I developed a deep passion for the most commonly played sport in the UK, football. As a gunners
-        supporter I had attended the majority of matches at the emirates that kicked off back in 2008. Furthermore I played for a small fooball team in mitcham scoring extraordinary goals, tearing the opponents hearts in pieces; leaving their fans devastated.
-        As the years passed by a new passion was formed within me. I began to love gaming. My 12th birthday I was blessed to be given a playstation 3 along with the game 'Modern Warfare 2'. Ever since I recieved this game I never socialised outdoors since.
+    <p>Welcome to my collection page, this page will hold a collection of exotic pictures which I've taken whilst traveling around the globe. These pictures were all captured whilst I was on holiday in numerous places such as greece, morroco, spain and portugual.
+      these pictures were all longshots displaying the nice view which was presented in front of me.
 
 
     </p>
