Added changes to biography page

--- a/bio.html
+++ b/bio.html
@@ -26,15 +26,15 @@
     </p>
     <h1>What about you now?</h1>
 
-    <p>Where do I start..? To this day I'm still a very social and creative person who enjoys trying new things. Furthermore I developed a new passion for computers and gaming. I'm currently in university studying computer system engineering as a 1st year
+    <p>Where do I even begin..? To this day I'm still a very social and creative individual who enjoys trying new things. Furthermore I developed a new passion for computers and gaming. I'm currently in university studying computer system engineering as a 1st year
         student.
     </p>
 
 </body>
 <footer>
     <h2>Keep in contact</h2>
-    <p>Email - TyroneM@contactme.co.uk</p>
-    <a href="https://spando360.github.io/tyrone-bio/cv.html">Link to Curriculim Vitae</a>
+    <p>Email - TyroneM@Collection.co.uk</p>
+    <a href="https://spando360.github.io/tyrone-collection/collection.html">Link to Collection Page</a>
     <p>Phone number - 07947382891</p>
     <p>Twitter - @tyrone300_</p>
 </footer>
